--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -165,16 +165,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-free-node-subscribe.htm" title="免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-high-speed-nodes.htm" title="免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享">免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-30-node-share-links.htm" title="免费Clash SSR - 9月30日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 9月30日20.1M/S|免费V2ray节点/Singbox节点/Clash节点/SSR节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-node-subscribe.htm" title="免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" title="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享">免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-free-v2ray.htm" title="免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
-                        <li class="py-2"><a href="/news/article-155058.htm" title="全面解析电脑科学上网APP：原理、选择与安全使用指南">全面解析电脑科学上网APP：原理、选择与安全使用指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-subscribe-node.htm" title="免费Clash SSR - 9月21日19.4M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket节点订阅分享">免费Clash SSR - 9月21日19.4M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-high-speed-nodes.htm" title="免费Clash SSR - 9月25日20M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 9月25日20M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-high-speed-nodes.htm" title="免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-node-subscribe.htm" title="免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-v2ray.htm" title="免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" title="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享">免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket节点/SSR/V2ray节点/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-13-free-node-subscribe.htm" title="免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-19-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月19日19.2M/S|免费Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月19日19.2M/S|免费Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-node-share-links.htm" title="免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +186,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
